2003-12-31 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile.in:  Updated for Doxygen 1.3.5.

2003-12-31 Braden McDaniel  <braden@endoframe.com>

	Doxygen doc-comment updates.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2003-12-14 Braden McDaniel  <braden@endoframe.com>

	Added value_type typedef to field_value subclasses.  Added
	constructor that takes a value_type to the mf* types.

	* src/libopenvrml/openvrml/field.h
	* src/libopenvrml/openvrml/field.cpp

2003-12-09 Braden McDaniel  <braden@endoframe.com>

	Modifed "viewer::insert_background" to use the "image" class.

	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.h

2003-11-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.cpp:  Implemented
	operator== for "openvrml::image".

2003-11-25 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(viewer::insert_texture):  Check GL_MAX_TEXTURE_SIZE and rescale
	the texture as needed.

2003-11-24 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(viewer::insert_texture):  Accept arbitrarily large textures
	rather than topping out at 256*256.  Textures with sides that
	are not powers of 2 are scaled down to the nearest power of 2.

2003-11-22 Braden McDaniel  <braden@endoframe.com>

	Modified "viewer::insert_texture" to accept an "image".

	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.h

2003-11-21 Braden McDaniel  <braden@endoframe.com>

	Replaced "w", "h", "components", and "pixels" members of
	"texture_node" with an "image" member that returns an
	"openvrml::image".
